AP-5267 Fix some depracated codes